[project]
name = "metadatastripper"
description = "A simple node to strip metadata / exif data from image output"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/HellerCommaA/ComfyUI-MetadataStripper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hellercommaa"
DisplayName = "ComfyUI-MetadataStripper"
Icon = ""
